--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "lucide-react": "^0.545.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "tailwindcss": "^4.0.6"
+    "react-hook-form": "^7.70.0",
+    "react-icons": "^5.5.0",
+    "tailwindcss": "^4.0.6",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
     "@tanstack/devtools-vite": "^0.3.11",
